--- a/contact-me.html
+++ b/contact-me.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Contact-Me</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Contact Me</h1>
@@ -12,20 +13,6 @@
         <li>Phone: <a href="tel:+6282192227002">+6282192227002</a></li>
     </ul>
     <hr>
-    <!-- <table>
-        <tr>
-            <td><label for="yourname">Your Name</label></td>
-            <td><input type="text" name="" id="yourname" placeholder="Your Name Goes Here"></td>
-        </tr>
-        <tr>
-            <td><label for="youremail">Your Email</label></td>
-            <td><input type="email" name="" id="youremail" required minlength="4" pattern=".+@+." placeholder="Your Email Goes Here"></td>
-        </tr>
-        <tr>
-            <td><label for="yourmessage">Your Message</label><br></td>
-            <td><textarea name="your Message" id="yourmessage" cols="30" rows="10">Tell Me :)</textarea></td>
-        </tr>
-    </table> -->
     <form class="" action="mailto:abdullah.addaba@gmail.com?subject=Ask from personal site" method="post" enctype="text/plain">
             <label for="yourname">Your Name</label>
             <input type="text" name="yourname" placeholder="Your Name Goes Here"><br>
