--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Abdullah Personal Site </title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <table cellspacing="10px"; width="100%">
+    <table cellspacing="10px" ; width="100%">
         <tr>
             <td><img src="img\Abdullah A PP.png" alt="Abdullah Addaba Profile" width="250px" height="250px"></td>
             <td>
                 <h1>Abdullah Addaba</h1>
-                <hr>
+
                 <p><i><strong>Bachelor</strong> from <b><a href="https://www.dinamika.ac.id/">Stikom
                                 Surabaya</a></b></i></p>
                 <p><em>Work</em> as <strong>DOE</strong> at <b>Linknet Surabaya</b></p>
@@ -25,8 +26,8 @@
         </tr>
     </table>
     <hr>
-
-    <h3>Books</h3>
+    
+    <h3><img src="img/books.png" alt="books ive read" style="width: 25px; height: 25px;">Books</h3>
     <ul>
         <li>Pemrograman dan Hack Android untuk Pemula</li>
         <li>Network Security dan Cyber Security</li>
@@ -35,7 +36,7 @@
         <li>Buku Sakti Pemrograman Web seri PHP</li>
     </ul>
     <hr>
-    <h3>School</h3>
+    <h3><img src="img/school.png" alt="my school" style="width: 25px; height: 25px;"> School</h3>
     <table>
         <thead>
             <tr>
@@ -56,42 +57,42 @@
         </tbody>
     </table>
     <hr>
-    <h3>Skill</h3>
+    <h3><img src="img/skills.png" alt="my skill" style="height: 25px; width: 25px;"> Skill</h3>
     <table cellspacing="10">
-       <tr>
-        <td>
-            <table>
-                <tr>
-                    <td>HTML</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>CSS</td>
-                    <td>⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Javascript</td>
-                    <td>⭐⭐⭐</td>
-                </tr>
-            </table>
-        </td>
-        <td>
-            <table>
-                <tr>
-                    <td>Network</td>
-                    <td>⭐⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Server</td>
-                    <td>⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                </tr>
-            </table>
-        </td>
-       </tr>
+        <tr>
+            <td>
+                <table>
+                    <tr>
+                        <td>HTML</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>CSS</td>
+                        <td>⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Javascript</td>
+                        <td>⭐⭐⭐</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <td>Network</td>
+                        <td>⭐⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Server</td>
+                        <td>⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
     </table>
     <h3><a href="hobbies.html">Hobbies</a></h3>
     <hr>
